# cmake_snippets

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  README.md  README.rst
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/cache/: CMakeLists.txt
examples/cycle_depdendency_check/: CMakeLists.txt
examples/cycle_depdendency_check/src/: CMakeLists.txt
examples/cycle_depdendency_check/src/alice/: CMakeLists.txt
examples/cycle_depdendency_check/src/alice/src/: alice.c
examples/cycle_depdendency_check/src/bob/: CMakeLists.txt
examples/delta_tests/: CMakeLists.txt
examples/delta_tests/src/: CMakeLists.txt
examples/delta_tests/src/alice/: CMakeLists.txt
examples/delta_tests/src/alice/include/: alice.h
examples/delta_tests/src/alice/src/: alice.c
examples/delta_tests/src/alice/test/: CMakeLists.txt  ut_alice.c
examples/delta_tests/tools/cmake/: small_world_test_wrapper.cmake
examples/verify_header_example/: CMakeLists.txt
examples/verify_header_example/src/alice/: CMakeLists.txt
examples/verify_header_example/src/alice/include/api/: alice.h  alice_data_types.h
examples/verify_header_example/src/alice/src/: alice.c
examples/verify_header_example/src/bob/: CMakeLists.txt
examples/verify_header_example/src/bob/include/: bob.h
examples/verify_header_example/src/bob/src/: bob.c
examples/verify_header_example/test_cmake_package/: CMakeLists.txt
examples/verify_header_example/test_cmake_package/src/: main.c
