
# ---------------------------------------------------------
# Basic Project Setup
# ---------------------------------------------------------
cmake_minimum_required(VERSION 3.25)
project(CMake-Snippets LANGUAGES NONE)

enable_testing()

# ---------------------------------------------------------
# Add all sub-snippets
# ---------------------------------------------------------
add_subdirectory(examples)
